<resources>
    <string name="app_name">Plan</string>
    <string-array name="names">
        <item></item>
        <item>By Bus</item>
        <item>By Train</item>
        <item>By Van</item>
        <item>By Bike</item>
    </string-array>
    <string name="title">Trip Title</string>
    <string name="num_days">Number of Days</string>
    <string name="start_date">Starting Date</string>
    <string name="end_date">Ending Date</string>
    <string name="transport_type">Transport Type</string>
    <string name="num_persons">Number of Persons</string>
    <string name="submit">SUBMIT</string>
    <string name="update">UPDATE</string>
    <string name="next">NEXT</string>
    <string name="submit_details">Submit Details</string>
    <string name="my_trips">My Trips</string>
    <string name="enter_details">Enter Trip Details</string>
    <string name="trip_details">Trip Details</string>
    <string name="delete">DELETE</string>
</resources>
