<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".ViewSingle_Trip">


    <TextView
        android:id="@+id/trip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="2dp">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <TextView
            android:id="@+id/tTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <TextView
            android:id="@+id/nDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/num_days"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <TextView
            android:id="@+id/sDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/start_date"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <TextView
            android:id="@+id/eDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:hint="@string/end_date"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <TextView
            android:id="@+id/travelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="#fff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <TextView
            android:id="@+id/nPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/num_persons"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>


</RelativeLayout>
